hphp/hack/test/ide_code_actions/quickfixes/missing_method/missing_method_trait.php.exp
Code actions available:
------------------------------------------
Add stubs for missing inherited methods (CodeActionKind: quickfix) SELECTED
Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `baz` (CodeActionKind: ) SELECTED
Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `bar` (CodeActionKind: ) SELECTED

Multiple code action titles match prefix: ''

Code action title: Add stubs for missing inherited methods

JSON for selected code action:
------------------------------------------
{
  "diagnostics":[],
  "edit":{
    "changes":{
      "FILE.php":[
        {
          "newText":"\n  <<__Override>>\n  public function bar(): void {}\n\n  <<__Override>>\n  public function baz(): void {}\n",
          "range":{"end":{"character":0,"line":10},"start":{"character":0,"line":10}}
        }
      ]
    }
  },
  "kind":"quickfix",
  "title":"Add stubs for missing inherited methods"
}

Applied edit for code action:
------------------------------------------
<?hh

trait FooTrait {
  abstract public function bar(): void;
  abstract public function baz(): void;
}

class Foo {
//      ^ at-caret
  use FooTrait;

  <<__Override>>
  public function bar(): void {}

  <<__Override>>
  public function baz(): void {}
}


Code action title: Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `baz`

JSON for selected code action:
------------------------------------------
{
  "command":{
    "arguments":[
      {
        "entrypoint":"FixLintErrorCodeAction",
        "overrideSelection":{"end":{"character":9,"line":7},"start":{"character":6,"line":7}},
        "predefinedPrompt":{
          "command":"Fix Hack error inline",
          "description":"Fix Hack error inline",
          "displayPrompt":"Fix inline - This class must be declared `abstract`, or provide an implementation for the abstract method `baz`",
          "model":"iCodeLlama 3.1 405B",
          "userPrompt":"\nGiven the following snippet of Hack code that is part of the file:\n 8 | class Foo {\n\n<DIAGNOSTIC>\nerror: Typing[4047] This class must be declared abstract, or provide an implementation for the abstract method baz\n\nFile missing_method_trait.php, line 8, character 7 - line 8, character 9:\n\n 6 | }\n 7 | \n 8 | class »Foo« {\n 9 | //      ^ at-caret\n10 |   use FooTrait;\n11 | }\n\nFoo uses FooTrait\n\nFile missing_method_trait.php, line 10, character 7 - line 10, character 14:\n\n 6 | }\n 7 | \n 8 | class Foo {\n 9 | //      ^ at-caret\n10 |   use »FooTrait«;\n11 | }\n\nThe method is defined here\n\nFile missing_method_trait.php, line 5, character 28 - line 5, character 30:\n\n 3 | trait FooTrait {\n 4 |   abstract public function bar(): void;\n 5 |   abstract public function »baz«(): void;\n 6 | }\n 7 | \n 8 | class Foo {\n\n\n</DIAGNOSTIC>\nEdit <selection_to_edit> in a way that would fix that lint.\nIf there are multiple ways to fix this issue, please return in the code section the most strightforward one that is part of <selection_to_edit>,\nany further suggestions can be added in the explanation section.\n"
        },
        "webviewStartLine":7
      }
    ],
    "command":"code-compose.show-inline-chat",
    "title":"Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `baz`"
  },
  "data":{"isAI":true},
  "diagnostics":[],
  "edit":{"changes":{}},
  "kind":"",
  "title":"Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `baz`"
}

The code action edit was a no-op

Code action title: Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `bar`

JSON for selected code action:
------------------------------------------
{
  "command":{
    "arguments":[
      {
        "entrypoint":"FixLintErrorCodeAction",
        "overrideSelection":{"end":{"character":9,"line":7},"start":{"character":6,"line":7}},
        "predefinedPrompt":{
          "command":"Fix Hack error inline",
          "description":"Fix Hack error inline",
          "displayPrompt":"Fix inline - This class must be declared `abstract`, or provide an implementation for the abstract method `bar`",
          "model":"iCodeLlama 3.1 405B",
          "userPrompt":"\nGiven the following snippet of Hack code that is part of the file:\n 8 | class Foo {\n\n<DIAGNOSTIC>\nerror: Typing[4047] This class must be declared abstract, or provide an implementation for the abstract method bar\n\nFile missing_method_trait.php, line 8, character 7 - line 8, character 9:\n\n 6 | }\n 7 | \n 8 | class »Foo« {\n 9 | //      ^ at-caret\n10 |   use FooTrait;\n11 | }\n\nFoo uses FooTrait\n\nFile missing_method_trait.php, line 10, character 7 - line 10, character 14:\n\n 6 | }\n 7 | \n 8 | class Foo {\n 9 | //      ^ at-caret\n10 |   use »FooTrait«;\n11 | }\n\nThe method is defined here\n\nFile missing_method_trait.php, line 4, character 28 - line 4, character 30:\n\n 3 | trait FooTrait {\n 4 |   abstract public function »bar«(): void;\n 5 |   abstract public function baz(): void;\n 6 | }\n\n\n</DIAGNOSTIC>\nEdit <selection_to_edit> in a way that would fix that lint.\nIf there are multiple ways to fix this issue, please return in the code section the most strightforward one that is part of <selection_to_edit>,\nany further suggestions can be added in the explanation section.\n"
        },
        "webviewStartLine":7
      }
    ],
    "command":"code-compose.show-inline-chat",
    "title":"Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `bar`"
  },
  "data":{"isAI":true},
  "diagnostics":[],
  "edit":{"changes":{}},
  "kind":"",
  "title":"Fix Hack error inline - This class must be declared `abstract`, or provide an implementation for the abstract method `bar`"
}

The code action edit was a no-op
