hphp/hack/test/ide_code_actions/quickfixes/missing_method/missing_method_trait.php
<?hh

trait FooTrait {
  abstract public function bar(): void;
  abstract public function baz(): void;
}

class Foo {
//      ^ at-caret
  use FooTrait;
}
